app/process_microservice/k8s/k8s-process-image.yml
apiVersion: v1
kind: Service
metadata:
  name: process-image-service
  namespace: CHANGE_NAMESPACE
spec:
  selector:
    app: process-image-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8003

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: process-image-service
  namespace: CHANGE_NAMESPACE

spec:
  replicas: 1
  selector:
    matchLabels:
      app: process-image-service
  template:
    metadata:
      labels:
        app: process-image-service
    spec:
      containers:
      - name: process-image-service
        image: gitlab-df-registry.imt-atlantique.fr/devops-s24/devops-app-s24-13/process-image-service:latest2
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - containerPort: 8003
      imagePullSecrets:
      - name: regcred
